SLCORE-612 Move taint vulnerabilities management to the backend